# curumim

./: .gitignore  Cargo.toml  README.md  test.txt
src/: cursor.rs  document.rs  editor.rs  input.rs  main.rs  prelude.rs  term.rs  terminal.rs  utils.rs
