[package]
name = "curumim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.27.0"
ropey = "1.6.1"
log = "0.4.20"
simple-logging = "2.0.2"
